--- a/index.html
+++ b/index.html
@@ -11,19 +11,17 @@
 <nav class="navbar">
     <div class="nav-left">
         <img src="new_logo-removebg-preview.png" alt="Logo" class="nav-logo">
-        <h1 class="hello">Tasker</h1>
+        <h1 class="nav-title">Tasker</h1>
     </div>
     <div class="nav-right">
         <div class="nav-text">Log in</div>
-           <button onclick="next()" class="nav-button"><a href="#">Get Started</a></button>
+           <button onclick="next()" class="nav-button">Get Started</button>
     </div>
 </nav>
 <div class="content">
-  <h1 class="one">Organize your Work</h1>
-  <h1 class="two">and life, finally</h1>
-  <p class="main">Become focused, organized, and calm with <span class="Tasker">Tasker</span>.</p>
-  <p class="pp">Ryan's #1 task manager and to-do list app.</p>
-  <button onclick="next()" class="naver">Get Started</button>
+  <h1 class="main-text">Organize your Work <br> and life, finally</h1>
+  <p class="sub-text">Become focused, organized, and calm with <br> Ryan's #1 task manager and to-do list app.<span class="Tasker">Tasker</span>.</p><br>
+  <button onclick="next()" class="main-button">Get Started</button>
 
 </div>
 
