--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Tasker</title>
-<link rel="stylesheet" href="index.css">
-<link rel="icon" type="image/png" style="height: 16px;" href="final.png">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tasker</title>
+    <link rel="stylesheet" href="index.css">
+    <link rel="icon" type="image/png" style="height: 16px;" href="final.png">
 </head>
 <body>
 <nav class="navbar">
@@ -15,19 +15,17 @@
     </div>
     <div class="nav-right">
         <div class="nav-text">Log in</div>
-           <button onclick="next()" class="nav-button">Get Started</button>
+        <button onclick="next()" class="nav-button">Get Started</button>
     </div>
 </nav>
 <div class="content">
-  <h1 class="main-text">Organize your Work <br> and life, finally</h1>
-  <p class="sub-text">Become focused, organized, and calm with <br> Ryan's #1 task manager and to-do list app.<span class="Tasker">Tasker</span>.</p><br>
-  <button onclick="next()" class="main-button">Get Started</button>
-
+    <h1 class="main-text">Organize your Work <br> and life, finally</h1>
+    <p class="sub-text">Become focused, organized, and calm with <br> Ryan's #1 task manager and to-do list app. <span class="Tasker">Tasker</span>.</p><br>
+    <button onclick="next()" class="main-button">Get Started</button>
 </div>
-
 <script>
     function next() {
-        window.location.href = "login.html"
+        window.location.href = "login.html";
     }
 </script>
 </body>
