--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </nav>
 <div class="content">
     <h1 class="main-text">Organize your Work <br> and life, finally</h1>
-    <p class="sub-text">Become focused, organized, and calm with <br> Ryan's #1 task manager and to-do list app. <span class="Tasker">Tasker</span>.</p><br>
+    <p class="sub-text">Become focused, organized, and composed with <br> Ryan's #1 task manager and to-do list app. <span class="Tasker">Tasker</span>.</p><br>
     <button onclick="next()" class="main-button">Get Started</button>
 </div>
 <script>
