--- a/login.html
+++ b/login.html
@@ -11,12 +11,15 @@
     <form onsubmit="return login()"> 
         <div id="outline">
             <h1 class="login"><span>Login</span></h1>
-
+            <div>
             <label for="name">Name:</label>
             <input type="text" id="name" name="name" required>
+            </div>
             <br>
+            <div>
             <label for="email">Email:</label>
             <input type="email" id="email" name="email" required>
+            </div>
             <br>
             <button class="btn" title="Submit Your Form" type="submit">Get Started</button>
         </div>
