--- a/app.html
+++ b/app.html
@@ -11,7 +11,7 @@
     <div class="container">
         <div class="input-field">
             <input type="text" id="input-el" required>
-            <button id="btn-el">Enter Your Todo</button>
+            <button id="btn-el">Add Your Todo</button>
         </div>
         <ul id="ul-el"></ul>
     </div>
